syntax = "proto3";

option go_package = "./proto";

service Dekart {
    //reports
    rpc CreateReport(CreateReportRequest) returns (CreateReportResponse) {}
    rpc ForkReport(ForkReportRequest) returns (ForkReportResponse) {}
    rpc UpdateReport(UpdateReportRequest) returns (UpdateReportResponse) {}
    rpc ArchiveReport(ArchiveReportRequest) returns (ArchiveReportResponse) {}
    rpc SetDiscoverable(SetDiscoverableRequest) returns (SetDiscoverableResponse) {}

    // datasets
    rpc CreateDataset(CreateDatasetRequest) returns (CreateDatasetResponse) {}
    rpc RemoveDataset(RemoveDatasetRequest) returns (RemoveDatasetResponse) {}

    // files
    rpc CreateFile(CreateFileRequest) returns (CreateFileResponse) {}

    // queries
    rpc CreateQuery(CreateQueryRequest) returns (CreateQueryResponse) {}
    rpc RunQuery(RunQueryRequest) returns (RunQueryResponse) {}
    rpc CancelQuery(CancelQueryRequest) returns (CancelQueryResponse) {}

    rpc GetEnv(GetEnvRequest) returns (GetEnvResponse) {}

    // streams
    rpc GetReportStream(ReportStreamRequest) returns (stream ReportStreamResponse) {}
    rpc GetReportListStream(ReportListRequest) returns (stream ReportListResponse) {}

    //statistics
    rpc GetUsage(GetUsageRequest) returns (GetUsageResponse) {}
}

message GetUsageRequest {}

message GetUsageResponse {
    int64 total_reports = 1;
    int64 total_queries = 2;
    int64 total_files = 3;
    int64 total_authors = 4;
}

message SetDiscoverableRequest {
    string report_id = 1;
    bool discoverable = 2;
}

message SetDiscoverableResponse {
}

message RemoveDatasetRequest {
    string dataset_id = 1;
}

message RemoveDatasetResponse {
    string dataset_id = 1;
}

message StreamOptions {
    int64 sequence = 1;
}

message GetEnvRequest {}

message GetEnvResponse {
    message Variable {
        enum Type {
            TYPE_UNSPECIFIED = 0;
            TYPE_MAPBOX_TOKEN = 1;
            TYPE_UX_DATA_DOCUMENTATION = 2;
            TYPE_UX_HOMEPAGE = 3;
            TYPE_ALLOW_FILE_UPLOAD = 4;
            TYPE_DATASOURCE = 5;
            TYPE_STORAGE = 6;
            TYPE_REQUIRE_AMAZON_OIDC = 7;
            TYPE_REQUIRE_IAP = 8;
            TYPE_DISABLE_USAGE_STATS = 9;
            TYPE_DISABLE_SENTRY_DSN_FRONTEND = 10;
        }
        Type type = 1;
        string value = 2;
    }
    repeated Variable variables = 1;
}

message ArchiveReportRequest {
    string report_id = 1;
    bool archive = 2;
}

message ArchiveReportResponse {}

message ReportListRequest{
    StreamOptions stream_options = 1;
}

message ReportListResponse {
    repeated Report reports = 1;
    StreamOptions stream_options = 2;
}

message Report {
    string id = 1;
    string map_config = 2;
    string title = 3;
    bool archived = 4;
    bool can_write = 5;
    string author_email = 6;
    bool discoverable = 7; // report is discoverable by other users of the same instance
}

message Dataset {
    string id = 1;
    string report_id = 2;
    string query_id = 3;
    int64 created_at = 4;
    int64 updated_at = 5;
    string file_id = 6;
}

message Query {
    string id = 1;
    // string report_id = 2;
    string query_text = 3;

    enum JobStatus {
        JOB_STATUS_UNSPECIFIED = 0;
        JOB_STATUS_PENDING = 1;
        JOB_STATUS_RUNNING = 2;
        JOB_STATUS_DONE_LEGACY = 3;  // legacy for backwards compatibility
        JOB_STATUS_READING_RESULTS = 4; // job is done proccessing results
        JOB_STATUS_DONE = 5; 
    }

    JobStatus job_status = 4;
    string job_result_id = 5;
    string job_error = 6;
    int64 job_duration = 7;
    int32 total_rows = 8;
    int64 bytes_processed = 9;
    int64 result_size = 10;
    int64 created_at = 11;
    int64 updated_at = 12;

    enum QuerySource {
        QUERY_SOURCE_UNSPECIFIED = 0;
        QUERY_SOURCE_INLINE = 1;
        QUERY_SOURCE_STORAGE = 2;
    }
    QuerySource query_source = 13;
    string query_source_id = 14;

}

message File {
    string id = 1;
    string name = 2;
    string mime_type = 3;
    int64 size = 4;
    string source_id = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_NEW = 1; // default initial state
        STATUS_RECEIVED = 2; // file uploaded by user to temp storage
        STATUS_STORED = 3; // file stored in permanent storage
    }
    Status file_status = 8;
    string upload_error = 9;
}

message UpdateReportRequest {
    Report report = 1;
    repeated Query query = 2;
}

message UpdateReportResponse {
}

message RunQueryRequest {
    string query_id = 1;
    string query_text = 2;
}

message RunQueryResponse {
}

message CancelQueryRequest {
    string query_id = 1;
}

message CancelQueryResponse {
}

message CreateDatasetRequest {
    string report_id = 1;
}

message CreateDatasetResponse {
}

message CreateFileRequest {
    string dataset_id = 1;
}

message CreateFileResponse {
    string file_id = 1;
}

message CreateQueryRequest {
    string dataset_id = 1;
}

message CreateQueryResponse {
    Query query = 1;
}

message ReportStreamRequest {
    Report report = 1;
    StreamOptions stream_options = 2;
}

message ReportStreamResponse {
    Report report = 1;
    repeated Query queries = 2;
    StreamOptions stream_options = 3;
    repeated Dataset datasets = 4;
    repeated File files = 5;
}

message ForkReportRequest {
    string report_id = 1;
}

message ForkReportResponse {
    string report_id = 1;
}

message CreateReportRequest {

}

message CreateReportResponse {
    Report report = 1;
}